tests/fixtures/invalid/pow_bytes_float_bool.py
# Cannot call pow() with Bytes, Float, Bool
x = pow(b"hello", 1.0, True)
